kubernetes/contour-demo/demo-tls-sni.yaml
# deploy TCP echo service that will listen to incoming TCP connections
# and echo everything it receives back to the client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: alpine
        image: alpine:3.9
        command:
          - "/bin/sh"
        args:
          - "-c"
          # We implement TCP echo server by having netcat listen to TCP echo port
          # and forward incoming data to tee, which echoes it back to the client
          # and also to stderr which can be observed with kubectl logs
          - "while true; do nc -l -p 7 -v -e tee /dev/stderr; done"


# expose the TCP echo service internally within Kubernetes cluster
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - port: 7


# deploy httpbin as a HTTP service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
          - containerPort: 80


# expose HTTP service internally within the Kubernetes cluster
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
  - port: 80
  selector:
    app: httpbin


# expose the TCP echo service externally using TLS.
# Contour will terminate the external TLS and use FQDN in the TLS SNI to
# route the request, as cleartext TCP connection, to the TCP echo service
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tcpecho
spec:
  virtualhost:
    fqdn: tcpecho.local
    tls:
      secretName: tcpecho-tls
  tcpproxy:
    services:
    - name: echo
      port: 7


# expose HTTP service externally using TLS.
# Contour will terminate the external TLS and use FQDN in the TLS SNI to
# route the request to the httpbin service
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: httpbin
spec:
  virtualhost:
    fqdn: httpbin.local
    tls:
      secretName: httpbin-tls
  routes:
    - match: /
      permitInsecure: true
      services:
      - name: httpbin
        port: 80
